--- a/default/docker-compose.yml
+++ b/default/docker-compose.yml
@@ -1,22 +1,76 @@
 services:
-  rabbit:
-    image: rabbitmq:4-management
-    container_name: rabbitmq
+#  rabbit:
+#    image: rabbitmq:4-management
+#    container_name: rabbitmq
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#    healthcheck: # Adding health check for rabbitmq service
+#      test: rabbitmq-diagnostics -q check_running
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 5s
+#    extends:
+#      file: common-config.yml
+#      service: network-deploy-service
+
+  accountsdb:
+    image: mysql
+    container_name: accounts_db
     ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck: # Adding health check for rabbitmq service
-      test: rabbitmq-diagnostics -q check_running
-      interval: 10s
-      timeout: 5s
+      - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
       retries: 10
-      start_period: 5s
+      interval: 10s
+      start_period: 10s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: accountsdb
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+  loandb:
+    image: mysql
+    container_name: loan_db
+    ports:
+      - 3306:3306
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: loandb
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+  cardsdb:
+    image: mysql
+    container_name: cards_db
+    ports:
+      - 3306:3306
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: cardsdb
     extends:
       file: common-config.yml
       service: network-deploy-service
 
   configserver:
-    image: abhisamd02/configserver:0.0.1-SNAPSHOT
+    image: abhisamd02/configserver:2.0
     container_name: config_server
     ports:
       - "8071:8071"
@@ -35,7 +89,7 @@ services:
       service: microservice-base-config
 
   account:
-    image: abhisamd02/account:0.0.1-SNAPSHOT
+    image: abhisamd02/account:2.0
     container_name: account_ms
     ports:
       - "8080:8080"
@@ -44,34 +98,45 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      accountsdb:
+        condition: service_healthy
     extends:
         file: common-config.yml
         service: microservice-configserver-config
+    environment:
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb" #put service name as host.
 
   loan:
-    image: abhisamd02/loan:0.0.1-SNAPSHOT
+    image: abhisamd02/loan:2.0
     container_name: loan_ms
     ports:
       - "8090:8090"
     depends_on:
       configserver:
         condition: service_healthy
+      loandb:
+        condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-configserver-config
+    environment:
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loandb:3307/loandb"
 
   cards:
-    image: abhisamd02/cards:0.0.1-SNAPSHOT
+    image: abhisamd02/cards:2.0
     container_name: cards_ms
     ports:
       - "9000:9000"
     depends_on:
       configserver:
         condition: service_healthy
+      cardsdb:
+        condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-
+    environment:
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3308/cardsdb"
 networks:
   lazybank:
     driver: bridge
