separating the common configs to common-config.yml

--- a/default/common-config.yml
+++ b/default/common-config.yml
@@ -3,6 +3,19 @@ services:
     networks:
       - lazybank
 
+  microservice-db-config:
+    extends:
+      service: network-deploy-service
+    image: mysql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+
   microservice-base-config: # common config for all microservices to extend from network-deploy-service
     extends:
       service: network-deploy-service
