--- a/qa/common-config.yml
+++ b/qa/common-config.yml
@@ -23,8 +23,8 @@ services:
       resources:
         limits:
           memory: 700M
-    environment:
-      SPRING_RABBITMQ_HOST: "rabbit"
+#    environment:
+#      SPRING_RABBITMQ_HOST: "rabbit"
 
   microservice-configserver-config: # common config for all microservices to extend from microservice-base-config
     extends:
